[project]
name = "bjj-bot"
version = "0.1.0"
description = "Button-first Telegram bot for tracking BJJ progress and arsenal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.18,<4.0",
  "aiohttp-socks>=0.9,<1.0",
  "aiosqlite>=0.20,<1.0",
  "greenlet>=3.1,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "sqlalchemy>=2.0.38,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bjj_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
